--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,7 @@ jobs:
         #   FOLDER: docs
       
       - name: Release
-        uses: release-drafter/release-drafter@master
+        uses: release-drafter/release-drafter@v5
         with:
           version: ${{ steps.version.outputs.version }}
           publish: true
