--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Pages
         uses: JamesIves/github-pages-deploy-action@v4.3.0
         with:
-          branch: main # The branch the action should deploy to.
+          branch: gh-pages # The branch the action should deploy to.
           folder: docs # The folder the action should deploy.
       
       - name: Release
