--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,11 +50,10 @@ jobs:
         run: npm run build:docs
 
       - name: Pages
-        uses: JamesIves/github-pages-deploy-action@v4.2.5
+        uses: JamesIves/github-pages-deploy-action@v4.3.0
         with:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: docs
+          branch: gh-pages
+          folder: docs
       
       - name: Release
         uses: release-drafter/release-drafter@v5
